fix margin image position on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -100,7 +100,7 @@
 
 	.fashion_slider {
 		margin-right: -2rem;
-		margin-left: -1.5rem;
+		margin-left: -7rem;
 	}
 
 	.fashion_house .discription {
